changed paths and how to handle delete photo
