# doc/api.yaml
@@ -420,7 +420,7 @@ paths:
         "401": { $ref: "#/components/responses/Unauthorized" }
         "500": { $ref: "#/components/responses/ServerError" }
 
-  /photos/{photoId}/likes:
+  /photos/likes/{photoId}:
     parameters:
       - name: photoId
         in: path
@@ -460,32 +460,6 @@ paths:
         "400": { $ref: "#/components/responses/BadRequest" }
         "401": { $ref: "#/components/responses/Unauthorized" }
         "500": { $ref: "#/components/responses/ServerError" }
-
-
-  /photos/{photoId}/:
-    parameters:
-      - name: photoId
-        in: path
-        required: true
-        schema:
-          $ref: '#/components/schemas/photoId'
-    delete:
-      tags: [photo]
-      summary: Delete Photo
-      description: Delete a photo.
-      operationId: deletePhoto
-      responses:
-        '200':
-          description: action successful
-          content:
-            text/plain:
-              schema:
-                $ref: '#/components/schemas/Success'
-
-        "400": { $ref: "#/components/responses/BadRequest" }
-        "401": { $ref: "#/components/responses/Unauthorized" }
-        "500": { $ref: "#/components/responses/ServerError" }
-
 
 components:
   responses:
