# service/api/api-handler.go
@@ -22,14 +22,14 @@ func (rt *_router) Handler() http.Handler {
 	rt.router.GET("/users/followers/:username", rt.wrap(handleGetFollowers))
 	rt.router.POST("/users", rt.wrap(HandleAddUser))
 	rt.router.POST("/photos/comments/:photoId", rt.wrap(handleCommentPhoto))
-	rt.router.POST("/photos/:photoId/likes", rt.wrap(HandleLikePhoto))
+	rt.router.POST("/photos/likes/:photoId", rt.wrap(HandleLikePhoto))
 	rt.router.POST("/users/bans/name", rt.wrap(handleBanUser))
 	rt.router.POST("/users/follows/:username", rt.wrap(HandleFollowUser))
 	rt.router.POST("/session", rt.wrap(doLogin))
 	rt.router.POST("/photos", rt.wrap(handleUploadPhoto))
 	rt.router.PATCH("/users/:username", rt.wrap(HandleSetUsername))
-	rt.router.DELETE("/photos/:photoId/likes", rt.wrap(HandleUnlikePhoto))
-	rt.router.DELETE("/photos/:photoId", rt.wrap(handleDeletePhoto))
+	rt.router.DELETE("/photos/likes/:photoId", rt.wrap(HandleUnlikePhoto))
+	rt.router.DELETE("/photos", rt.wrap(handleDeletePhoto))
 	rt.router.DELETE("/users/bans/:username", rt.wrap(handleUnbanUser))
 	rt.router.DELETE("/users/follows/:username", rt.wrap(HandleUnfollowUser))
 	rt.router.DELETE("/comments/:commentId", rt.wrap(handleUncommentPhoto))
